--- a/style.css
+++ b/style.css
@@ -1,3 +1,3 @@
-header{background-color:blanchedalmond; 
-        color:cornflowerblue;
+header{background-color:#5F0f40; 
+        color:#FA725A;
 }
