--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 header{
         background-color: #627254;
         color:#DDDDDD;
-        <ul>
-        background-color: #DDDDDD 
-        <ul>
+        {<ul>
+        background-color:#DDDDDD 
+        <ul>}
 }
