--- a/style.css
+++ b/style.css
@@ -2,6 +2,6 @@ header{
         background-color: #627254;
         color:#DDDDDD;
 }
-{<ul>
+{<li>
         background-color: #DDDDDD;
-        <ul>}
+        <li>}
