--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 header{
         background-color: #627254;
         color:#DDDDDD;
-            {<li>
+            <li>
         background-color: #DDDDDD;
-        <li>}    
+        <li>    
 
         
 }
