--- a/style.css
+++ b/style.css
@@ -1,7 +1,14 @@
-header{
+.cabeçalho{
         background-color: #627254;
-        color:#DDDDDD;
-            
-        
+
 }
+
+.cabeçalho-1 {color: #DDDDDD;
+
+]}
+            
+.cabeçalho-lista-1 {color white-space;
+
+}
+
 
