--- a/style.css
+++ b/style.css
@@ -1,14 +1,8 @@
 .cabeçalho{
         background-color: #627254;
-
 }
-
 .cabeçalho-1 {color: #DDDDDD;
-
-]}
-            
+]}      
 .cabeçalho-lista-1 {color white-space;
-
 }
-
-
+{ image
