--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 .cabeçalho-lista-item1 {color: #DDDDDD;
 
 }
-.cabeçalho-lista-item2 {COLOR: #DDDDDD
+.cabeçalho-lista-item2 {COLOR: #DDDDDD;
 }
 
 .cabeçalho-imagem {
