--- a/style.css
+++ b/style.css
@@ -1,51 +1,25 @@
 .cabeçalho {
-        background-color: #627254;
-}
-.cabeçalho-título {color: #DDDDDD;
-]}      
 
-.cabeçalho-lista { color:#DDDDDD;
+        background-color: #627254;        
+}
+
+.cabeçalho-título {
+        color: #DDDDDD;
+
+}      
+
+.cabeçalho-lista { color :#DDDDDD;
 
 }
-.cabeçalho-lista-item1 {color: #DDDDDD;
+.cabeçalho-lista-item-1 {color: #DDDDDD;
 
 }
-.cabeçalho-lista-item2 {COLOR: #DDDDDD;
+
+.cabeçalho-lista-item-2 {COLOR: #DDDDDD; 
+
+
 }
 
 .cabeçalho-imagem {
-        width:10%;
+        width: 10%;
 }
-
-{ image
-
-
-        .cabeçalho {
-                background-color: #5F0F40;
-                }
-            
-            .cabeçalho-título {
-                color: #FA725A;
-            }
-            
-            .cabeçalho-lista {
-                color: white;
-            }
-            
-            .cabeçalho-imagem {
-                width: 10%;
-            }.cabeçalho {
-                background-color: #5F0F40;
-                }
-            
-            .cabeçalho-título {
-                color: #FA725A;
-            }
-            
-            .cabeçalho-lista {
-                color: white;
-            }
-            
-            .cabeçalho-imagem {
-                width: 10%;
-            }
