--- a/style.css
+++ b/style.css
@@ -8,15 +8,17 @@
 
 }      
 
-.cabeçalho-lista { color :#DDDDDD;
+.cabeçalho-lista { 
+        color :#DDDDDD;
 
 }
-.cabeçalho-lista-item-1 {color: #DDDDDD;
+.cabeçalho-lista-item-1 {
+        color: #DDDDDD;
 
 }
 
-.cabeçalho-lista-item-2 {COLOR: #DDDDDD; 
-
+.cabeçalho-lista-item-2 {
+        COLOR: #DDDDDD; 
 
 }
 
