--- a/style.css
+++ b/style.css
@@ -1,11 +1,10 @@
 .cabeçalho {
-        
+
         background-color: #627254;        
 }
 
 .cabeçalho-título {
-        color: #DDDDDD
-
+        color:#627254;        
 }      
 
 .cabeçalho-lista { 
