--- a/style.css
+++ b/style.css
@@ -4,10 +4,10 @@
 }
 
 .cabeçalho-título {
-        color:#627254;        
+        color:#DDDDDD;        
 }      
 
-.cabeçalho-lista { 
+.cabeçalho-lista { .
         color :#DDDDDD;
 
 }
