--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@
         color:#DDDDDD;        
 }      
 
-.cabeçalho-lista { .
-        color :#DDDDDD;
+.cabeçalho-lista { 
+        color:#DDDDDD;
 
 }
 .cabeçalho-lista-item-1 {
