--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
 .cabeçalho-lista-item-1 {
         color: #DDDDDD;
         display: inline-block
-        margin: 0 16pix
+        margin: 0 16px
 }
 
 .cabeçalho-lista-item-2 {
