--- a/style.css
+++ b/style.css
@@ -17,9 +17,9 @@
 .cabeçalho-lista-item-1 {
         color: #DDDDDD;
         display: inline-block
-        margin: 0 36px
+        margin: 0 16px
 }
-
+1
 .cabeçalho-lista-item-2 {
         color: #DDDDDD;
         display: inline-block
