--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 .cabeçalho-título {
         color:#DDDDDD;    
         display: flex;
+        justify-content: space-around;
 }      
 
 .cabeçalho-lista { 
