--- a/style.css
+++ b/style.css
@@ -12,7 +12,8 @@
 
 .cabeçalho-lista { 
         color:#DDDDDD;
-      
+        display: flex;
+        justify-content: space-around;
 }
 .cabeçalho-lista-item-1 {
         color: #DDDDDD;
