--- a/style.css
+++ b/style.css
@@ -17,9 +17,13 @@
 }
 .cabeçalho-lista-item-1 {
         color: #DDDDDD;
+        display: flex;
+        justify-content: space-around;
 }
 .cabeçalho-lista-item-2 {
         color: #DDDDDD;
+        display: flex;
+        justify-content: space-around;
 }
 
 .cabeçalho-imagem {
