--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 .cabeçalho-título {
         color:#DDDDDD;    
-        display: inline-block
+        display flex;
         justify-content: space-around;
 }      
 
