--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
         color:#DDDDDD;    
         display flex;
         justify-content: space-around;
+        font-size: 24;
 }      
 
 .cabeçalho-lista { 
