--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
         color:#DDDDDD;    
         display flex;
         justify-content: space-around;
+        padding: 24px;
         font-size: 24;
 }      
 
