--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 .cabeçalho-título {
         color:#DDDDDD;    
         display: flex;
-        justify-content: space-around;
+        justify-content: space-between;
         padding: 36px;
 }      
 
