--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@
 .cabeçalho-título {
         color:#DDDDDD;    
         display: flex;
-        justify-content: stretch;
-        padding: 45px;
+        justify-content: start;
+        padding: 20px;
 }      
 
 .cabeçalho-lista { 
