--- a/style.css
+++ b/style.css
@@ -12,7 +12,8 @@
 
 .cabeçalho-lista { 
         color:#DDDDDD;
-        display: flex;
+        display: inline-flex
+
         
 }
 .cabeçalho-lista-item-1 {
