--- a/style.css
+++ b/style.css
@@ -12,8 +12,10 @@
 
 .cabeçalho-imagem {
         width: 10%;
-    }.cabeçalho {
-        background-color: #5F0F40;
+    }
+    
+.cabeçalho {
+        background-color: #627254;
         }
 
 .cabeçalho-lista { 
