--- a/style.css
+++ b/style.css
@@ -5,11 +5,10 @@
 
 .cabeçalho-1-título {
         color:#DDDDDD;    
-        
 }      
 
 .cabeçalho-imagem {
-        width: 10%;
+        width: 10cqb;
     }
 
 .cabeçalho {
