--- a/style.css
+++ b/style.css
@@ -4,12 +4,12 @@
 
        }
 
-.cabeçalho-título {
+.cabeçalho-títul {
         color: #DDDDDD;    
 }      
 
 .cabeçalho-imagem {
-       width: 10;
+       width: 10%;
     }
 
 .cabeçalho {
