--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@
        }
 
 .cabeçalho-título {
-        color:#DDDDDD;    
+        color:#DDDDDD;  
+        font-size: 24px;  
 }      
 
 .cabeçalho-imagem {
