--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
         color:#DDDDDD;  
         font-size: 10px;
         padding: 25px;
+        scroll-snap-destination: 0cap;
 }       
 
 .cabeçalho-imagem {
