--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
         color:#DDDDDD;  
         font-size: 15px;
         padding: 25px;
+        justify-content: space-around;
 }       
 
 .cabeçalho-imagem {
