--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 .cabeçalho-título {
         color:#DDDDDD;  
         font-size: 15px;
-        padding: 25px;
+        padding: 1cqmax;
         justify-content: space-around;
 }       
 
