--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 .cabeçalho-título {
         color:#DDDDDD;  
         font-size: 15px;
+        padding: 10%px;
         justify-content: space-around;
 }       
 
