--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 
 .cabeçalho-título {
         color:#DDDDDD;  
+        justify-content: space-around;
         font-size: 24px;
         padding: 100px;
         justify-content: space-around;
