--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
         background-color: #627254; 
         justify-content: space-around;
-        font-size: 24px;
+        font-size: 5%;
        }
 
 .cabeçalho-título {
