--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 .cabeçalho {
 
         background-color: #627254; 
+        font-display:flex;
         justify-content: space-around;
         font-size: 10%;
        }
