--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
         font-display:flex;
         justify-content: space-around;
         font-size: 35%;
-        display: inline inline-block;
+        display: inline-block;
        }
 
 .cabeçalho-título {
