--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
         justify-content: space-around;
         font-size: 35%;
         display: inline-block;
+        margin: 16px;
        }
 
 .cabeçalho-título {
