--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 .cabeçalho {
 
         background-color: #627254; 
-        justify-content: space-around;
-        font-size: 30   %;
-        margin: 0 16px;
-       }
+        display: flex;
+        padding: 16px;
+        font-size: 24px ;
+
+}
 
 .cabeçalho-título {
         color:#DDDDDD;  
