--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
         display: flex;
         padding: 16px;
         font-size: 24px;
-        display: inline
+        display: inline-block
 
 }
 
