--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@
         padding: 16px;
         font-size: 24px;
         display: inline-block
-        margin: 0  16px;
+        margin: 0 16px;
+
 
 }
 
@@ -20,11 +21,13 @@
 
 .cabeçalho-lista { 
         color:#DDDDDD;
-
+        display: inline-block;
+        margin: 16px;
 }
 .cabeçalho-lista-item-1 {
         color: #DDDDDD;
-        
+        display: inline-block;
+        margin: 16px;
         
 }
 .cabeçalho-lista-item-2 {
