--- a/style.css
+++ b/style.css
@@ -12,8 +12,8 @@
 
 .cabeçalho-título {
         color:#DDDDDD;  
-       
-      }       
+       font-size: 24px;
+      }         
 
 .cabeçalho-imagem {
        width: 10%;
