--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@
         color:#DDDDDD;
         display: inline-block;
         margin: 16px;
+        fonte-size:24px
 }
 .cabeçalho-lista-item-1 {
         color: #DDDDDD;
