--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
         color:#DDDDDD;
         display: inline-block;
         margin: 16px;
-        fonte-size:24px
+        font-size:24px
 }
 .cabeçalho-lista-item-1 {
         color: #DDDDDD;
