--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@
         color: #DDDDDD;
         display: inline-block
         color: #DDDDDD;
-        margin: 16px;
+        margin: 0 16px;
         font-size: 24px;
         justify-content: space-around; 
        
