--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 .cabeçalho {
 
         background-color: #627254; 
-       
+       font-display: flex;
+       padding: 0 16px;
+       font-size: 16px;
         
-
 }
 
 .cabeçalho-título {
