--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
         background-color: #627254; 
        font-display: flex;
-       padding: 0 16px;
+       padding: 24px;
        font-size: 16px;
         
 }
