--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 .cabeçalho {
 
         background-color: #627254; 
-       font-display: flex;
-       padding:14px;
-       font-size: 16px;
+        font-display: flex;
+        padding:0 10px;
+        font-size: 16px;
         
 }
 
