--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 
         background-color: #627254; 
         font-display:flex;
+        padding: 24  0px;
         justify-content: space-around;
                
 }
