--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
         background-color: #627254; 
         font-display:flex;
-        padding: 24  0px;
+        padding: 24px  0;
         justify-content: space-around;
                
 }
