--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
         display: flex;
         padding: 24px  0;
         justify-content: space-around;
-               
+        align-items: center;
 }
 
 .cabeçalho-título {
