--- a/style.css
+++ b/style.css
@@ -29,7 +29,8 @@
         font-size: 12px;
        
 }
-.apresentação-imagem { 
+.Apresentação-imagem {
+        width: 25%; { 
         width: 10%;
 
 }
