--- a/style.css
+++ b/style.css
@@ -30,6 +30,11 @@
        
 }
 .Apresentação-imagem {
+        background-color: #627254; 
+        display: flex;
+        padding: 24px  0;
+        justify-content: space-around;
+        align-items: center;
         width: 25%; { 
         width: 10%;
 
