--- a/style.css
+++ b/style.css
@@ -29,7 +29,9 @@
         font-size: 12px;
        
 }
-.Apresentação-imagem {
+
+.
+.apresentação{
         background-color: #627254; 
         display: flex;
         padding: 24px  0;
