--- a/style.css
+++ b/style.css
@@ -32,12 +32,15 @@
 
 .
 .apresentação{
+
         background-color: #627254; 
         display: flex;
-        padding: 24px  0;
-        justify-content: space-around;
-        align-items: center;
-        width: 25%; { 
+
+}
+.Apresentação-imagem {
+        width: 25%; 
         width: 10%;
 
 }
+        
+       
