--- a/style.css
+++ b/style.css
@@ -26,14 +26,13 @@
 }
 .cabeçalho-lista-item-2 {
         color: #DDDDDD;
-        font-size: 12px;
-       
+        font-size: 12px;       
 }
 
-.
+section
 .apresentação{
 
-        background-color: #627254; 
+        background-color: #a5b896; 
         display: flex;
 
 }
