--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
-*{ margin: 0;
-padding: 0;
+* { 
+        margin: 0;
+        padding: 0;
+
 }
-*.cabeçalho {
+.cabeçalho {
 
         background-color: #627254; 
         display: flex;
@@ -14,10 +16,11 @@ padding: 0;
 .cabeçalho-título {
         color:#DDDDDD;  
        font-size: 16px;
-      }         
+}         
 
 .cabeçalho-imagem {
        width: 10%;
+       
     }
 
 .cabeçalho-lista { 
@@ -27,11 +30,12 @@ padding: 0;
 .cabeçalho-lista-item-1 {
         display: inline-block;
         margin: 0 16px;
-}
+
        
 .cabeçalho-lista-item-2 {
         display: inline-block;
         margin: 0 16px;
+
 }
 .apresentação{
         background-color: #DDDDDD; 
@@ -44,4 +48,5 @@ padding: 0;
 
 .apresentação-imagem {
         width: 10%; 
+
 }
