--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
 
 .cabeçalho-imagem {
        width: 10%;
-       
+
     }
 
 .cabeçalho-lista { 
@@ -30,17 +30,18 @@
 .cabeçalho-lista-item-1 {
         display: inline-block;
         margin: 0 16px;
+        font-size: 24PX;
 
        
 .cabeçalho-lista-item-2 {
         display: inline-block;
         margin: 0 16px;
+        font-size: 24PX;
 
 }
 .apresentação{
         background-color: #DDDDDD; 
         display: flex;
-
 .Apresentacao titulo {
         background-color: #DDDDDD; 
 
