--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@
 
 }
 .apresentação{
-        background-color: #DDDDDD; 
+        background-color: #ad1515; 
         display: flex;
 
 .Apresentacao titulo {
@@ -53,3 +53,4 @@
         width: 25%;
         
 }
+.apresentação
