--- a/style.css
+++ b/style.css
@@ -43,6 +43,8 @@
         background-color: #ad1515; 
         display: flex;
 
+}
+
 .Apresentacao titulo {
         background-color: #DDDDDD; 
         font-size: 24PX;
