--- a/style.css
+++ b/style.css
@@ -49,14 +49,16 @@
         width: 25%;
     }
 .apresentação{
-        background-color: #ad1515; 
+        background-color: #DDDDDD; 
         display: flex;
 
 }
 
 .Apresentacao {
         background-color: #DDDDDD; 
-        font-size: 24PX;
+        display: flex;
+        
+
 
 }
 
@@ -64,4 +66,3 @@
         width: 25%;
         
 }
-.apresentação
