--- a/style.css
+++ b/style.css
@@ -39,3 +39,12 @@
         font-size: 10PX;
 
 }
+
+cabeçalho-imagem {
+        width: 10%;
+    }
+    
+    
+    .Apresentação-imagem {
+        width: 25%;
+    }
