--- a/style.css
+++ b/style.css
@@ -38,13 +38,8 @@
         margin: 0 25px;
         font-size: 10PX;
 
-}
-
-cabeçalho-imagem {
-        width: 10%;
-    }
-    
+}]
     
 .apresentaçãoimagem {
-        width: 25%;
+        width: 5px;
     }
