--- a/style.css
+++ b/style.css
@@ -38,8 +38,9 @@
         margin: 0 25px;
         font-size: 10PX;
 
-}]
-    
+}
+
 .apresentaçãoimagem {
         width: 0,0005%;
+        weight: 0,0005%
     }
