--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 .cabeçalho {
 
         background-color: #627254; 
+        color #DDDDDD;
         display: flex;
         padding: 24px  0;
         justify-content: space-around;
