--- a/style.css
+++ b/style.css
@@ -41,9 +41,24 @@
 
 }
 .apresentação {
-        width: 10px;
+
 }
 
+.apresentaçãotitulo{ 
+        color:#DDDDDD
+        
+
+}
+
+.apresentaçãoparagrafo1{]
+
+
+}
+
+.apresentaçãoparagrafo2 {
+
+
+}
 .apresentaçãoimagem {
 
         width: 10px;
