--- a/style.css
+++ b/style.css
@@ -41,7 +41,13 @@
 
 }
 .apresentação {
-
+        background-color: #627254; 
+        color: #DDDDDD;
+        display: flex;
+        padding: 24px  0;
+        justify-content: space-around;
+        align-items: center;
+        padding: 24px  0; 
 }
 
 .apresentaçãotitulo{ 
