--- a/style.css
+++ b/style.css
@@ -48,15 +48,10 @@
        
 }
 
-.apresentaçãotitulo{ 
+.apresentação-titulo{ 
         color: #DDDDDD;
-        font-size: 24px;
+        font-size: 56px;
 
-.title{
-        color:#627254
-}
-
-}
 
 .apresentaçãoparagrafo1{]
 
