--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@
 }
 .apresentação {
         background-color: #627254; 
-        color: #DDDDDD;
+        color: #76885B;
         display: flex;
         padding: 24px  0;
        
