--- a/style.css
+++ b/style.css
@@ -47,22 +47,26 @@
         padding: 24px  0;
        
 }
+.my-section {
+        background-color: #ffcc00; /* Change this to the desired color */
+        padding: 20px; /* Optional: Add some padding around the content */
+      }
 
 .apresentação-titulo{ 
         color: #DDDDDD;
         font-size: 56px;
 
 
-.apresentaçãoparagrafo1{]
+.apresentação-paragrafo1{]
 
 
 }
 
-.apresentaçãoparagrafo2 {
+.apresentação-paragrafo2 {
 
 
 }
-.apresentaçãoimagem {
+.apresentação-imagem {
 
         width: 10px;
 }
