--- a/style.css
+++ b/style.css
@@ -48,25 +48,7 @@
        
 }
 .my-section {
-        background-color: #ffcc00; /* Change this to the desired color */
-        padding: 20px; /* Optional: Add some padding around the content */
-      }
+        background-color: #ffcc00; 
+        padding: 20px;
 
-.apresentação-titulo{ 
-        color: #DDDDDD;
-        font-size: 56px;
-
-
-.apresentação-paragrafo1{]
-
-
-}
-
-.apresentação-paragrafo2 {
-
-
-}
-.apresentação-imagem {
-
-        width: 10px;
 }
