--- a/style.css
+++ b/style.css
@@ -47,8 +47,10 @@
         padding: 24px  0;
        
 }
-.my-section {
+.section {
         background-color: #ffcc00; 
         padding: 20px;
+
+
 
 }
