--- a/style.css
+++ b/style.css
@@ -48,9 +48,11 @@
        
 }
 .section {
-        background-color: #ffcc00; 
+        background-color: #76885B; 
         padding: 20px;
-
+.apresentação-imagem{ 
+        width: 10px;
+}
 
 
 }
