--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@
         background-color: #76885B; 
         padding: 20px;
 .apresentação-imagem{ 
-        width: 10%auto;
+        width: 5%;
 }
 
 
