--- a/style.css
+++ b/style.css
@@ -50,9 +50,15 @@
 .section {
         background-color: #76885B; 
         padding: 20px;
+
 .apresentação-imagem{ 
         width: 5%;
 }
+
+
+}
+
+
 
 
 }
