--- a/style.css
+++ b/style.css
@@ -46,9 +46,8 @@
         padding: 24px  0;
        
 }
-.section {
+.mysection {
         background-color: #76885B; 
-        padding: 20px;
 
 }
 
