--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 .cabeçalho {
 
         background-color: #627254; 
-        color: #76885B;
+        color:rgb(118, 136, 91);
         display: flex;
         padding: 24px  0;
         justify-content: space-around;
@@ -40,7 +40,6 @@
         font-size: 10PX;
 
 }
-
-.apre
-
-}
+.apresentção[ 
+        background-color: ;
+]
