--- a/style.css
+++ b/style.css
@@ -40,6 +40,11 @@
         font-size: 10PX;
 
 }
+.mysection{
+
 .apresentção[ 
-        background-color: ;
+        background-color: rgb(118, 136, 91);
+
+}
+
 ]
