--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 .cabeçalho {
 
         background-color: #627254; 
-        color:rgb(118, 136, 91);
+        color: Sage;
         display: flex;
         padding: 24px  0;
         justify-content: space-around;
