--- a/style.css
+++ b/style.css
@@ -40,11 +40,9 @@
         font-size: 10PX;
 
 }
-.mysection{
 
-.apresentção[ 
-        background-color: rgb(118, 136, 91);
 
+.apresentção{
+        background-color:#76885B
+              
 }
-
-]
