--- a/style.css
+++ b/style.css
@@ -42,7 +42,24 @@
 }
 
 
-.apresentção{
-        background-color:#76885B
+.apresentação{
+        background-color: blue;
               
+}
+.apresentação-título{
+
+
+}
+
+.apresentação-parágrafo1{
+
+
+}
+
+.apresentaçã-parágrafo2{ 
+
+}
+.apresentação-imagem{
+
+
 }
