--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@
 }
 
 
-.apresentação{
+.apresentação {
         background-color: blue;
               
 }
@@ -50,15 +50,15 @@
 
 }
 
-.apresentação-parágrafo1{
+.apresentação-parágrafo1 {
 
 
 }
 
-.apresentaçã-parágrafo2{ 
+.apresentaçã-parágrafo2 { 
 
 }
-.apresentação-imagem{
-
+.apresentação-imagem {
+        width: 10PX;
 
 }
