--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@
 
 }
 
+.section[
 
 .apresentação {
         background-color: blue;
@@ -60,5 +61,7 @@
 }
 .apresentação-imagem {
         width: 10PX;
+
+}
 
 }
