--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@
 
        
 .cabecalho-lista-item-2 {
+        
         display: inline-block;
         margin: 0 25px;
         font-size: 10PX;
@@ -57,7 +58,7 @@
 
 }
 
-.apresentaçã-parágrafo2 { 
+.apresentação-parágrafo2 { 
 
 }
 .apresentação-imagem {
