--- a/style.css
+++ b/style.css
@@ -42,26 +42,26 @@
 }
 
 
-.apresentação {
+.apresentacao {
         background-color: blue;
               
 }
-.apresentação-título{
+.apresentacao-titulo{
 
 
 }
 
-.apresentação-parágrafo1 {
+.apresentacao-paragrafo-1 {
         color:#DDDDDD
         font-size: 10px;
 
 
 }
-
-.apresentação-parágrafo2 { 
+]
+.apresentacao-paragrafo-2 { 
 
 }
-.apresentação-imagem {
+.apresentacao-imagem{
         width: 10PX;
 
 }
