--- a/style.css
+++ b/style.css
@@ -37,15 +37,25 @@
 .cabecalho-lista-item-2 {
         
         display: inline-block;
-        margin: 0 25px;
+        margin: 0  16px;
         font-size: 10PX;
 
 }
 
 
 .apresentacao {
-        background-color: blue;
+        background-image: linear-gradient(#76885B,#DDDDDD);
+        color:white;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          padding: 24px 0;
               
+}
+
+.escola-div-conteudo{
+        width: 35%;
+
 }
 .apresentacao-titulo{
 
