--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 .cabeçalho {
 
-        background-color: #627254; 
+        background-color:linear-gradient(#76885B,#DDDDDD);
         display: flex;
         padding: 24px  0;
         justify-content: space-around;
@@ -64,7 +64,6 @@
         color:#DDDDDD
    
 }
-]
 .apresentacao-paragrafo-2 { 
 
 }
