--- a/style.css
+++ b/style.css
@@ -42,6 +42,10 @@
 
 }
 
+.apresentacao-imagem{
+        width: 25%;
+}
+
 
 .apresentacao {
         background-image: linear-gradient(#76885B,#DDDDDD);
@@ -50,10 +54,10 @@
         justify-content: center;
         align-items: center;
         padding: 15px 0;
-              
+        
 }
 
-.escola-div-conteudo{
+.apresentacao{
         width: 35%;
 
 .apresentacao-titulo{
