--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 .cabeçalho {
 
-        background-color:linear-gradient(#76885B,#DDDDDD);
+        background-color:#627254
         display: flex;
         padding: 24px  0;
         justify-content: space-around;
