--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@
 .cabeçalho {
 
         background-color:#627254
-        display:flex;
+        color:white;
+        display: flex;
         justify-content: space-around;
         align-items: center;
         padding: 16px  0; 
