--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@
 
 
 .apresentacao {
-        background-image: linear-gradient(#76885B,#DDDDDD);
+        background-image:#DDDDDD;
 ]       color: #DDDDDD; 
         display: flex;
         justify-content: center;
