--- a/style.css
+++ b/style.css
@@ -31,8 +31,8 @@
         display: inline-block;
         margin: 0 16px;
         font-size: 16PX;
-
-       
+        
+}
 .cabecalho-lista-item-2 {
         
         display: inline-block;
