--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@
 }
 .cabeçalho-título {
         color:#DDDDDD;  
-       font-size: 12px;
+       font-size: 16
+       px;
 }         
 
 .cabeçalho-imagem {
