--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@
         
 }
 .cabecalho-lista-item-2 {
-        
+        width: 5%;
         display: inline-block;
         margin: 0  16px;
         font-size: 5PX;
