--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@
 
 
 .apresentacao {
-        background-image:#DDDDDD;
+        background-image: #76885B;
 ]       color: #DDDDDD; 
         display: flex;
         justify-content: center;
@@ -56,7 +56,7 @@
 }
 
 .apresentacao{
-        width: 35%;
+        width: 15%;
 
 .apresentacao-titulo{
         padding: 24%   0;
