--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@
         background-image: linear-gradient(#76885B, white);
 ]       color: #DDDDDD; 
         display: flex;
-        justify-content: center;
+        justify-content: space; 
         align-items: center;
         padding: 15px 0;
         
