--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@
 
 .apresentacao{
         display:flex;
-        align-items: baseline;
+        align-items: center;
         width: 50%;
 
 .apresentacao-titulo{
