--- a/style.css
+++ b/style.css
@@ -49,9 +49,9 @@
         background-image: linear-gradient(#76885B, white);
 ]       color: #DDDDDD; 
         display: flex;
-        justify-content: space; 
+        justify-content: space-around;
         align-items: center;
-        padding: 15px 0;
+        padding: 16px 0;
         
 }
 
