--- a/style.css
+++ b/style.css
@@ -66,10 +66,13 @@
 }
 
 .apresentacao-paragrafo-1 {
-        color:#DDDDDD
-   
+        color:#DDDDDD;
+        font size: 15px;
 }
 .apresentacao-paragrafo-2 { 
+        color:#DDDDDD;
+        font]size: 15px;
+
 
 }
 .apresentacao-imagem{
