--- a/style.css
+++ b/style.css
@@ -46,8 +46,8 @@
 
 
 .apresentacao {
-        background-image: linear-gradient(#76885B, white);
-]       color: #DDDDDD; 
+        background-image: linear-gradient(#76885B, white);      
+        color: #DDDDDD; 
         display: flex;
         justify-content: space-around;
         align-items: center;
@@ -57,21 +57,21 @@
 
 .apresentacao{
         display:flex;
-        align-items: center;
-        width: 50%;
+        align-items: space around;
+        width: 35%;
 
 .apresentacao-titulo{
-        collor: #DDDDDD;
+        color: #DDDDDD;
         font-size:16px;
 }
 
 .apresentacao-paragrafo-1 {
         color:#DDDDDD;
-        font size: 15px;
+        font-size: 15px;
 }
 .apresentacao-paragrafo-2 { 
         color:#DDDDDD;
-        font]size: 15px;
+        font-size: 15px;
 
 
 }
