--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@
         color: #DDDDDD; 
         display: flex;
         justify-content: space-around;
-        align-items: center;
+        align-items: flex-start;
         padding: 3px 0;
         
 }
