--- a/style.css
+++ b/style.css
@@ -13,8 +13,7 @@
 }
 .cabeçalho-título {
         color:#DDDDDD;  
-       font-size: 16
-       px;
+       font-size: 16px;
 }         
 
 .cabeçalho-imagem {
@@ -41,17 +40,17 @@
 }
 
 .apresentacao-imagem{
-        width: 150%;
+        width: 25%;
 }
 
 
 .apresentacao {
         background-image: linear-gradient(#626262,#76885B );
         color:#DDDDDD;
-        display:flex;]
+        display:flex;
         justify-content: center;
-        align-itens:center;
-        padding: 24px;
+        align-items:center;
+      
         
 }
 
