--- a/style.css
+++ b/style.css
@@ -45,12 +45,12 @@
 
 
 .apresentacao {
-        background-image: linear-gradient(#76885B#626262, );
+        background-image: linear-gradient(#626262,#76885B );
         color:#DDDDDD;
         display:flex;
         justify-content: center;
         align-items:center;
-      
+        padding: 100px;
         
 }
 
