--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@
         display:flex;
         justify-content: center;
         align-items:center;
-        padding: 100px;
+        padding: 24px  0px;
         
 }
 
