--- a/style.css
+++ b/style.css
@@ -54,6 +54,10 @@
         
 }
 
+.escola-div-conteudo{
+         width: 35%;]
+}
+       
 .apresentacao{
         display:flex;
         align-items: center;
