--- a/style.css
+++ b/style.css
@@ -68,20 +68,17 @@
 }
 
 .apresentacao-paragrafo-1 {
-        color:#DDDDDD;
+        color:#76885B;
         font-size: 15px;
 }
 .apresentacao-paragrafo-2 { 
-        color:#DDDDDD;
+        color:#76885B;
         font-size: 15px;
-
-
 }
+
 .apresentacao-imagem{
-        width: 3%;
+        width: 50px;
 }
-
-
 
 }
 
