--- a/style.css
+++ b/style.css
@@ -5,10 +5,11 @@
 }
 .cabeçalho {
         background-color:#627254;
+        color:#DDDDDD;
         display: flex;
         justify-content: space-around;
         align-items: center;
-        padding: 16px  0; 
+        padding: 24px  0; 
 
 }
 .cabeçalho-título {
@@ -25,18 +26,11 @@
         color:#DDDDDD;
        
 }
-.cabeçalho-lista-item-1 {
+.cabeçalho-lista-item {
         display: inline-block;
         margin: 0 16px;
         font-size: 5PX;
         
-}
-.cabecalho-lista-item-2 {
-        width: 5%;
-        display: inline-block;
-        margin: 0  16px;
-        font-size: 5PX;
-
 }
 
 .apresentacao-imagem{
