--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 .cabeçalho {
-        background-color:#627254;
+        background-color:#4F6F52;
         color: #DDDDDD;
         display: flex;
         justify-content: space-around;
@@ -39,4 +39,8 @@
         width: 10%;
 }
       
-apresenta
+.apresentacao { 
+        background-image: linear-gradient(#4F6F52,#D2E3C8 );
+        color:#4F6F52;
+        
+}
