--- a/style.css
+++ b/style.css
@@ -39,8 +39,12 @@
         width: 10%;
 }
       
-.apresentacao { 
+.section-apresentacao { 
         background-image: linear-gradient(#4F6F52,#D2E3C8 );
         color:#4F6F52;
+        display:flex;
+        align-items: center;
         
+
+
 }
