--- a/style.css
+++ b/style.css
@@ -38,13 +38,18 @@
 .apresentacao-imagem{
         width: 10%;
 }
+
+.apresentacao-div-conteudo {
+          width: 35%;
+
+}
       
 .section-apresentacao { 
         background-image: linear-gradient(#4F6F52,#D2E3C8 );
         color:#4F6F52;
-        display:flex;
+        display:flex;center;        justify-content: ;
         align-items: center;
-        
+
 
 
 }
