--- a/style.css
+++ b/style.css
@@ -50,7 +50,9 @@
           display:flex;center;        
           justify-content:center;
           align-items: center;
-
+          padding: 24px  0;
+          
+        
 
 
 }
