--- a/style.css
+++ b/style.css
@@ -44,15 +44,12 @@
 
 }
       
-        .section-apresentacao { 
-          background-image: linear-gradient(#4F6F52,#D2E3C8 );
-          color:#4F6F52;
-          display:flex;center;        
-          justify-content:center;
-          align-items: center;
-          padding: 24px  0;
-
-        
-
+.apresentacao { 
+        background-image: linear-gradient(#4F6F52,#D2E3C8 );
+        color:#4F6F52;
+        display:flex;   
+        justify-content:center;
+        align-items: center;
+        padding: 24px  0;
 
 }
