--- a/style.css
+++ b/style.css
@@ -36,12 +36,12 @@
 }
 
 .apresentacao-imagem{
-        width: 10%;
+        width: 35%;
 }
 
 .apresentacao { 
         background-image: linear-gradient(#4F6F52,#D2E3C8 );
-        color:#4F6F52;
+        color:#DDDDDD;
         display:flex;   
         justify-content:center;
         align-items: center;
@@ -51,5 +51,5 @@
 
 .apresentacao-div-conteudo {
           width: 35%;
-          
+
 }
