--- a/style.css
+++ b/style.css
@@ -51,5 +51,10 @@
 
 .apresentacao-div-conteudo {
           width: 35%;
-
+          
 }
+
+.apresentacao-titulo{
+        padding: 24px    0;
+
+ }
