--- a/style.css
+++ b/style.css
@@ -37,8 +37,7 @@
 
 .apresentacao-imagem{
         width: 25%;
-   
-
+}
 .apresentacao { 
         background-image: linear-gradient(#4F6F52,#D2E3C8 );
         color:#DDDDDD;
