--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@
 }
 .apresentacao { 
         background-image: linear-gradient(#4F6F52,#D2E3C8 );
-        color:#DDDDDD;
+        color:#4F6F52;
         display:flex;   
         justify-content:center;
         align-items: center;
@@ -52,8 +52,7 @@
           width: 35%;
           
 }
-
 .apresentacao-titulo{
-        padding: 24px    0;
+        padding: 24px;
 
  }
