--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@
 }
 .apresentacao { 
         background-image: linear-gradient(#4F6F52,#D2E3C8 );
-        color:#4F6F52;
+        color:#2b3a2c;
         display:flex;   
         justify-content:center;
         align-items: center;
