--- a/style.css
+++ b/style.css
@@ -3,7 +3,11 @@
         padding: 0;
 
 }
-
+body{ 
+        font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
 .cabeçalho {
         background-color:#4F6F52;
         color: #DDDDDD;
